Screen Overflowing Fixed

--- a/src/Components/Landing/CompaniesLanding.css
+++ b/src/Components/Landing/CompaniesLanding.css
@@ -10,7 +10,7 @@
 .companies-landing{
     background: #0F0F0F;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
