--- a/src/Components/Landing/InitiativesLanding.css
+++ b/src/Components/Landing/InitiativesLanding.css
@@ -20,7 +20,7 @@
   margin-bottom: 50px;
   font-weight: 500;
   line-height: normal;
-  margin-left: 338px;
+  padding-left: 338px;
   max-width: 1200px; 
   width: 100%;
 }
